--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,13 +4,14 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
     <servlet>
-        <servlet-name>hello</servlet-name>
-        <servlet-class>javachat.test</servlet-class>
+        <servlet-name>login</servlet-name>
+        <servlet-class>javachat.LoginUser</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>hello</servlet-name>
-        <url-pattern>/hello</url-pattern>
+        <servlet-name>login</servlet-name>
+        <url-pattern>/login</url-pattern>
     </servlet-mapping>
+
     <filter>
         <filter-name>default</filter-name>
         <filter-class>javachat.DefaultFilter</filter-class>
