Added some TODO for DataBase class.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,6 +12,15 @@
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>test</servlet-name>
+        <servlet-class>javachat.test</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>test</servlet-name>
+        <url-pattern>/hello</url-pattern>
+    </servlet-mapping>
+
     <filter>
         <filter-name>default</filter-name>
         <filter-class>javachat.DefaultFilter</filter-class>
