Возвращает сообщения по дате из БД. В БД сохраняется сообщение с датой в миллисекундах. req.login заменен на req.getSession().setAttribute(); в MessageSend.java String username = (String) req.getSession().getAttribute("user"); jdbc

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -48,6 +48,14 @@
         <url-pattern>/users</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>test</servlet-name>
+        <servlet-class>javachat.test</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>test</servlet-name>
+        <url-pattern>/test</url-pattern>
+    </servlet-mapping>
 
     <filter>
         <filter-name>default</filter-name>
